dataset1235/2025-2/805158916/users/1514794398/executions/2651470117_3921830315.log
== RUN (2025-08-27 03:25:12)
-- CODE: 
lgas= float(input("quantidade abastecida :"))

pgas=2.86

oleo=50

varlogas=lgas*pgas 

vservico=valorgas=oleo

valortotal=vservico*(1+34/100)

print(round(valortotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade abastecida :67.0
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade abastecida :67.0
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade abastecida :67.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade abastecida :67.0
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade abastecida :67.0
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade abastecida :67.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:26:30)
-- CODE: 
lgas= float(input("quantidade abastecida : "))

pgas=2.86

oleo=50

varlogas=lgas*pgas 

vservico=valorgas+oleo

valortotal=vservico*(1+34/100)

print(round(valortotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:26:42)
-- CODE: 
lgas= float(input("quantidade abastecida : "))

pgas=2.86

oleo=50

varlogas=lgas*pgas 

vservico=valorgas+oleo

valortotal=vservico*(1+34/100)

print(round(valortotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vservico=valorgas+oleo
             ^^^^^^^^
NameError: name 'valorgas' is not defined. Did you mean: 'varlogas'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:27:45)
-- CODE: 
lgas= float(input("quantidade abastecida : "))

pgas=2.86

oleo=50

valorgas=lgas*pgas 

vservico=valorgas+oleo

valortotal=vservico*(1+34/100)

print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade abastecida : 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade abastecida : 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade abastecida : 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade abastecida : 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade abastecida : 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade abastecida : 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:25:25)
-- CODE: 
lgas= float(input("quantidade abastecida :"))

pgas=2.86

oleo=50

varlogas=lgas*pgas 

vservico=valorgas=oleo

valortotal=vservico*(1+34/100)

print(round(valortotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade abastecida :67.0
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade abastecida :67.0
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade abastecida :67.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade abastecida :67.0
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade abastecida :67.0
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade abastecida :67.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:27:32)
-- CODE: 
lgas= float(input("quantidade abastecida : "))

pgas=2.86

oleo=50

valorgas=lgas*pgas 

vservico=valorgas+oleo

valortotal=vservico*(1+34/100)

print(round(valortotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade abastecida : 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade abastecida : 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade abastecida : 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade abastecida : 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade abastecida : 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade abastecida : 230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
